# crustcrawler_ax12

./: README.md
ax12_controller/: CMakeLists.txt  package.xml
ax12_controller/config/: ax12_arm_configuration.yaml
ax12_controller/launch/: ax12_arm_real.launch  ax12_arm_sim.launch  ax12_controller.launch  non_action_server.launch
ax12_controller/src/: ax12_action_server.py  lib_dynamixel.py  move_test.py  servo_config.py
ax12_description/: CMakeLists.txt  package.xml
ax12_description/launch/: ax12_real.launch  ax12_rviz.launch  urdf.rviz
ax12_description/materials/.svn/: all-wcprops  entries
ax12_description/materials/scripts/: ax12_arm.material
ax12_description/urdf/: ax12_arm.xacro  ax12_arm_robot.urdf  ax12_arm_robot.xacro  materials.urdf.xacro
ax12_description/urdf/.svn/: all-wcprops  entries  (+1 more)
ax12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ax12_moveit_config/config/: ax12_arm.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
ax12_moveit_config/launch/: ax12_arm_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  demo_real.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_real.rviz  moveit_rviz.launch  moveit_rviz_real.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ax12_scripts/: CMakeLists.txt  package.xml
ax12_scripts/src/: move_demo.py
(+10 files in other folders)
